Fix header and navbar overlaying scrollbar in mobile version

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -43,6 +43,5 @@
   }
   .header-container {
     height: 5em;
-    right: 0;
   }
 }
